--- a/src/Components/FormatsSection/formatsSection.module.css
+++ b/src/Components/FormatsSection/formatsSection.module.css
@@ -38,14 +38,15 @@
     /* height: 83%; */
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 40px;
     animation: cardsAnimation 2s ease forwards;
     margin-bottom: 50px;
 }
 
 .wrapper__content__cardsBlock__card {
     width: 30%;
-    height: 500px;
+    /* height: 620px; */
     background-color: var(--background-card-gray);
     border-radius: 15px;
     overflow: hidden;
@@ -53,8 +54,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
-
 }
 
 .wrapper__content__cardsBlock__card__imgBlock {
@@ -68,21 +67,19 @@
 
 .wrapper__content__cardsBlock__card__imgBlock__img {
     height: 100%;
-    width: 100%;
-    object-fit: cover;
+
+    object-fit: contain;
 }
 
 .wrapper__content__cardsBlock__card__textBlock {
     width: 80%;
-    height: 35%;
+    height: 40%;
     display: flex;
     flex-direction: column;
-
-
 }
 
 .wrapper__content__cardsBlock__card__spanTitle {
-    font-size: 28px;
+    font-size: 25px;
     font-weight: 600;
     color: var(--text-color-base);
     margin-bottom: 15px;
@@ -95,7 +92,7 @@
 }
 
 .wrapper__content__cardsBlock__card__orderBlock {
-    margin-top: 20px;
+    margin-top: 0px;
     width: 80%;
     height: 25%;
     display: flex;
@@ -133,11 +130,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 20px;
     animation: cardsAnimation 2s ease forwards;
     margin-bottom: 30px;
 }
 
-.wrapper__content__cardsBlock__card {
+.wrapper__content__cardsBlock__card2 {
     width: 50%;
     height: 80%;
     background-color: var(--background-card-gray);
