--- a/src/Components/Reviews/reviews.module.css
+++ b/src/Components/Reviews/reviews.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     width: 100%;
     height: 850px;
-    background-color: rgba(21, 21, 21, 255);
+    background-color: var(--backgroung-darkest-gray);
     display: flex;
     align-items: center;
     justify-content: center;
