modal windows for forms

--- a/src/Components/ClientsSlider/custom.css
+++ b/src/Components/ClientsSlider/custom.css
@@ -4,7 +4,7 @@
   
   /* Настройка цвета стрелки вправо */
   .swiper-button-next {
-    color: rgb(237,27,36); /* Цвет стрелки вправо (зеленый) */
+    color: rgb(237,27,36); /* Цвет стрелки вправо (красный) */
   }
   .swiper-pagination-bullet-active {
     background-color: rgb(237,27,36); /* Цвет фона активного индикатора (красный) */
