--- a/src/Components/FormatsSection/formatsSection.module.css
+++ b/src/Components/FormatsSection/formatsSection.module.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1000;
 }
 
 .wrapper__content {
@@ -941,7 +942,6 @@
         transition: 0.2s;
         margin-bottom: 30px;
     }
-    
 
     .wrapper__content__cardsBlock__card__orderBlock__button:hover {
         background-color: rgb(238, 50, 60);
