--- a/src/Components/AboutMe/aboutMe.module.css
+++ b/src/Components/AboutMe/aboutMe.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     width: 100%;
     height: auto;
-    background-color: var(--backgroung-darkest-gray);
+    background-color: var(--backgroung-dark-gray);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,7 +17,7 @@
 }
 
 
-.wrapper__content__spanTitle {
+.wrapper__content__spanTitle { 
     font-size: 52px;
     font-weight: 700;
     color: white;
@@ -63,6 +63,7 @@
     color: white;
     font-size: 23px;
     font-weight: 600;
+    border: red solid 1px
 }
 
 
