--- a/src/Components/FormatsSection/formatsSection.module.css
+++ b/src/Components/FormatsSection/formatsSection.module.css
@@ -46,7 +46,7 @@
 
 .wrapper__content__cardsBlock__card {
     width: 30%;
-    height: 550px;
+    height: 450px;
     background-color: var(--background-card-gray);
     border-radius: 15px;
     overflow: hidden;
@@ -56,20 +56,20 @@
     justify-content: space-between;
 }
 
-.wrapper__content__cardsBlock__card__imgBlock {
+/* .wrapper__content__cardsBlock__card__imgBlock {
     width: 100%;
     height: 35%;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
 
-.wrapper__content__cardsBlock__card__imgBlock__img {
+/* .wrapper__content__cardsBlock__card__imgBlock__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
 .wrapper__content__cardsBlock__card__textBlock {
     width: 80%;
@@ -119,6 +119,16 @@
     box-shadow: 0 7px 10px -5px rgba(237, 27, 36, 0.5);
     transition: 0.2s;
 }
+
+/*geeegreg*/
+form {
+    width: 100%;
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+}
+
+
 
 .wrapper__content__cardsBlock__card__orderBlock__button:hover {
     background-color: rgb(238, 50, 60);
