--- a/src/Components/Reviews/reviews.module.css
+++ b/src/Components/Reviews/reviews.module.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 .wrapper__content {
@@ -47,8 +48,8 @@
 
     display: flex;
     justify-content: center;
-
     animation: messageLAnimation 1s ease forwards;
+    z-index: 999;
 }
 
 .wrapper__content_rewiewBlock__layer_SmallR {
@@ -56,7 +57,7 @@
     /* border: wheat solid 1px; */
     display: flex;
     justify-content: center;
-
+    z-index: 999;
     animation: messageRAnimation 1s ease forwards;
 }
 
@@ -65,7 +66,7 @@
     /* border: wheat solid 1px; */
     display: flex;
     justify-content: center;
-
+    z-index: 999;
     animation: messageLAnimation 1s ease forwards;
 }
 
@@ -74,7 +75,7 @@
     /* border: wheat solid 1px; */
     display: flex;
     justify-content: center;
-
+    z-index: 999;
     animation: messageRAnimation 1s ease forwards;
 }
 
