--- a/src/Components/AboutMe/aboutMe.module.css
+++ b/src/Components/AboutMe/aboutMe.module.css
@@ -22,24 +22,28 @@
     font-weight: 700;
     color: white;
     margin-bottom: 50px;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .wrapper__content__textBlock {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .wrapper__content__textBlock_img1 {
-    margin: 30px 30px 10px 0px;
+    margin: 0px 30px 10px 0px;
     overflow: hidden;
     float: left;
     width: 300px;
-    height: 350px;
+    height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 15px;
+    border-radius: 50%;
+    transform: scale(1.1);
 }
 
 .wrapper__content__textBlock_img2 {
@@ -57,13 +61,15 @@
 .wrapper__content__textBlock_img1 img,
 .wrapper__content__textBlock_img2 img {
     height: 100%;
+    object-fit: cover;
+    transform: scale(1.1);
 }
 
 .wrapper__content__textBlock__p {
     color: white;
     font-size: 23px;
     font-weight: 600;
-
+    line-height: 40px;
 }
 
 
