--- a/src/Components/FormatsSection/formatsSection.module.css
+++ b/src/Components/FormatsSection/formatsSection.module.css
@@ -1,5 +1,6 @@
 .wrapper {
     width: 100%;
+    min-height: 400px;
     height: auto;
     background-color: var(--backgroung-dark-gray);
     display: flex;
@@ -30,6 +31,7 @@
 .wrapper__content__cardsBlock__hidden {
     opacity: 0;
     width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
